--- a/evrs_bs_cc2650lp_app/.settings/org.eclipse.core.resources.prefs
+++ b/evrs_bs_cc2650lp_app/.settings/org.eclipse.core.resources.prefs
@@ -11,6 +11,8 @@ encoding//Debug/Drivers/RF/subdir_rules.mk=UTF-8
 encoding//Debug/Drivers/RF/subdir_vars.mk=UTF-8
 encoding//Debug/Drivers/SPI/subdir_rules.mk=UTF-8
 encoding//Debug/Drivers/SPI/subdir_vars.mk=UTF-8
+encoding//Debug/Drivers/TL/subdir_rules.mk=UTF-8
+encoding//Debug/Drivers/TL/subdir_vars.mk=UTF-8
 encoding//Debug/Drivers/TRNG/subdir_rules.mk=UTF-8
 encoding//Debug/Drivers/TRNG/subdir_vars.mk=UTF-8
 encoding//Debug/Drivers/UART/subdir_rules.mk=UTF-8
@@ -29,6 +31,8 @@ encoding//Debug/TOOLS/subdir_rules.mk=UTF-8
 encoding//Debug/TOOLS/subdir_vars.mk=UTF-8
 encoding//Debug/drv/subdir_rules.mk=UTF-8
 encoding//Debug/drv/subdir_vars.mk=UTF-8
+encoding//Debug/drv/tl/subdir_rules.mk=UTF-8
+encoding//Debug/drv/tl/subdir_vars.mk=UTF-8
 encoding//Debug/makefile=UTF-8
 encoding//Debug/objects.mk=UTF-8
 encoding//Debug/sources.mk=UTF-8
