Working on reshaping the EBS and inserting umsg control
state change not done yet

--- a/evrs_bs_cc2650lp_app/.project
+++ b/evrs_bs_cc2650lp_app/.project
@@ -244,7 +244,7 @@
 		<link>
 			<name>Drivers/Display/DisplayUART.c</name>
 			<type>1</type>
-			<locationURI>TI_RTOS_DRIVERS_BASE/ti/mw/display/DisplayUART.h</locationURI>
+			<locationURI>TI_RTOS_DRIVERS_BASE/ti/mw/display/DisplayUART.c</locationURI>
 		</link>
 		<link>
 			<name>Drivers/Display/DisplayUART.h</name>
